fix alignment

--- a/style_nysha.css
+++ b/style_nysha.css
@@ -44,7 +44,7 @@ body {
     font-size: 43px;
     width: 640px;
     position: relative;
-    margin-left:40px;
+    margin-left: 500px;
 }
 
 .app text p{
